--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drag-game",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/Drag-And-Drop",
+  "homepage": "https://amanuela97.github.io/Drag-And-Drop",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
